avoid horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,7 @@ form > *
 {
 	border: 1px solid ;
 	margin: .25em ;
+	max-width: calc(100% - .5em) ;
 }
 
 form > fieldset
